Details
-
Bug
-
Resolution: Done
-
Not Evaluated
-
6.5
-
None
-
491dc83bbf (qt/qtbase/dev) 491dc83bbf (qt/tqtc-qtbase/dev)
Description
Build against OpenSSL 3.0 fails after change in https://codereview.qt-project.org/c/qt/qtbase/+/380034
OpenSSL ................................ yes Qt directly linked to OpenSSL ........ no OpenSSL 1.1 ............................ no OpenSSL 3.0 ............................ yes
FAILED: lib/libQt6Core.so.6.5.0 /home/sapiippo/qt6/build/tmp/hosttools/ld: src/corelib/CMakeFiles/Core.dir/tools/qcryptographichash.cpp.o: in function `QCryptographicHashPrivate::finalize() [clone .part.0]': qcryptographichash.cpp:(.text+0x38a5): undefined reference to `EVP_MD_get_size' /home/sapiippo/qt6/build/tmp/hosttools/ld: qcryptographichash.cpp:(.text+0x38bd): undefined reference to `EVP_DigestFinal_ex' /home/sapiippo/qt6/build/tmp/hosttools/ld: src/corelib/CMakeFiles/Core.dir/tools/qcryptographichash.cpp.o: in function `QCryptographicHash::QCryptographicHash(QCryptographicHash::Algorithm)': qcryptographichash.cpp:(.text+0x3a19): undefined reference to `EVP_MD_CTX_new'
Build works if using -openssl-linked configure argument.
Attachments
Issue Links
- is duplicated by
-
QTBUG-107002 qcryptographichash.cpp.o linked failure
-
- Closed
-
For Gerrit Dashboard: QTBUG-106978 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
435208,3 | QCryptographicHash: only use OpenSSL 3.0 when OpenSSL will be linked | dev | qt/qtbase | Status: MERGED | +2 | 0 |